tests/ui/duplicate.stderr
error: duplicate #[optional] attribute
 --> $DIR/duplicate.rs:9:9
  |
9 |         #[optional]
  |         ^^^^^^^^^^^

error: duplicate #[tag] attribute
  --> $DIR/duplicate.rs:17:9
   |
17 |         #[tag = 2]
   |         ^^^^^^^^^^

error: duplicate #[untagged] attribute
  --> $DIR/duplicate.rs:23:5
   |
23 |     #[untagged]
   |     ^^^^^^^^^^^

error: duplicate #[optional] attribute
  --> $DIR/duplicate.rs:33:9
   |
33 |         #[optional]
   |         ^^^^^^^^^^^

error: duplicate #[tag] attribute
  --> $DIR/duplicate.rs:41:9
   |
41 |         #[tag = 2]
   |         ^^^^^^^^^^

error: duplicate #[untagged] attribute
  --> $DIR/duplicate.rs:47:5
   |
47 |     #[untagged]
   |     ^^^^^^^^^^^
